feat: 관제화면 충전소 위치 표기 로직 수정

--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,13 @@
     -->
     <script
       type="text/javascript"
-      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=7f33892e71a7a20c576f715fd4f45f42"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=7f33892e71a7a20c576f715fd4f45f42&libraries=services"
     ></script>
+    <!-- <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=7f33892e71a7a20c576f715fd4f45f42"
+    ></script> -->
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css"
